--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -31,7 +32,7 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
-  <div id="root" style="transition: 0.5s"></div>
+  <div id="root" style="font-family: IBM Plex Mono"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
